test/semantic_errors/invalid_declaration10.mc
void main() {
    int a, b = foo(), c; /* foo not declared */
}